// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsSection - Snapshots > matches snapshot with custom classNames 1`] = `
<div
  class="flex flex-col items-start justify-start"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="inline-flex items-center justify-start pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      aria-level="2"
      class="custom-title"
      data-level="2"
      data-size="lg"
      data-testid="heading"
      role="heading"
    >
      Account Settings
    </div>
  </div>
  <p
    class="pb-6 text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex flex-col items-start justify-start"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="inline-flex items-center justify-start pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      aria-level="2"
      data-level="2"
      data-size="lg"
      data-testid="heading"
      role="heading"
    >
      Account Settings
    </div>
  </div>
  <p
    class="pb-6 text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with destructive variant 1`] = `
<div
  class="flex flex-col items-start justify-start"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="inline-flex items-center justify-start pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      aria-level="2"
      data-level="2"
      data-size="lg"
      data-testid="heading"
      role="heading"
    >
      Account Settings
    </div>
  </div>
  <p
    class="pb-6 text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="destructive"
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;

exports[`SettingsSection - Snapshots > matches snapshot with disabled button 1`] = `
<div
  class="flex flex-col items-start justify-start"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    class="inline-flex items-center justify-start pb-6"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      aria-level="2"
      data-level="2"
      data-size="lg"
      data-testid="heading"
      role="heading"
    >
      Account Settings
    </div>
  </div>
  <p
    class="pb-6 text-base leading-6 font-medium text-secondary-foreground"
    data-size="md"
    data-testid="typography"
  >
    Manage your account preferences and security settings.
  </p>
  <button
    data-size="default"
    data-testid="button"
    data-variant="secondary"
    disabled=""
    id="edit-account-btn"
  >
    <svg
      data-size="16"
      data-testid="mock-button-icon"
    >
      <title>
        Mock Button Icon
      </title>
    </svg>
    Edit Account
  </button>
</div>
`;
